tests/base/invalid/For_CompileFail_1.whiley


void ::main(System.Console sys):
    st = "Hello World"
    for st in args:
        sys.out.println(st)
